<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"

    >
    <TextView
        android:id="@+id/itemPrice1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        tools:text="@string/compare_textView_price"
        style="@style/RecyclerViewRow"/>
    <TextView
        android:id="@+id/dateOfPurchase"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        tools:text="@string/compare_textView_purchaseDate"
        style="@style/RecyclerViewRow"
        />
    <TextView
        android:id="@+id/store"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        tools:text="@string/compare_textView_store"
        style="@style/RecyclerViewRow"

        />
    <TextView
        android:id="@+id/brand"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        tools:text="@string/compare_textView_brand"
        android:layout_weight="1"
        style="@style/RecyclerViewRow"
        />

    <TextView
        android:id="@+id/amount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        tools:text="@string/compare_textView_amount"
        android:layout_weight="1"
        style="@style/RecyclerViewRow"
        />
    <TextView
        android:id="@+id/priceforKilo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        tools:text="@string/compare_textView_weight"
        android:layout_weight="1"
        style="@style/RecyclerViewRow"
        />

</LinearLayout>