<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:padding="10dp"
    >
        <TextView
            android:id="@+id/txtclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="X"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />
        <TextView
            style="@style/PopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/textView_title_productName"
            android:textColor="@color/colorPrimary"/>

        <android.widget.AutoCompleteTextView
            android:id="@+id/item"
            style="@style/PopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:hint="@string/editText_hint_insertProductName"
            android:maxLength="20"
            android:inputType="text|textVisiblePassword"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/addItem"
            style="@style/PopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_addToList"/>


</LinearLayout>